--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch ./src/index.ts"
+    "dev": "npx tsx watch ./src/index.ts",
+    "build": "npx tsup src --out-dir build",
+    "start": "node build/index.js"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +28,7 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/pg": "^8.10.9",
     "prisma": "^5.6.0",
+    "tsup": "^8.0.2",
     "tsx": "^4.1.4",
     "typescript": "^5.2.2"
   }
